[package]
name = "d4graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
indicatif = "0.17.5"
petgraph = "0.6.3"
rayon = "1.7.0"
serde_json = "1.0.97"
walkdir = "2.3.3"
